<project xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns="http://maven.apache.org/POM/4.0.0"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
    <modelVersion>4.0.0</modelVersion>
    <parent>
        <artifactId>compaj</artifactId>
        <groupId>tech.hiddenproject</groupId>
        <version>${revision}</version>
    </parent>
    <groupId>tech.hiddenproject.compaj</groupId>
    <artifactId>gui</artifactId>
    <version>${gui.version}</version>
    <properties>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <javafx.version>17.0.1</javafx.version>
        <jpackager.path>/Users/kpekepsalt/Downloads/jdk.packager-osx/jpackager</jpackager.path>
        <default.classifier>mac</default.classifier>
    </properties>
    <profiles>
        <profile>
            <id>Mac</id>
            <dependencies>
                <dependency>
                    <groupId>org.openjfx</groupId>
                    <artifactId>javafx-graphics</artifactId>
                    <version>${javafx.version}</version>
                    <classifier>mac</classifier>
                </dependency>
            </dependencies>
        </profile>
        <profile>
            <id>Win</id>
            <properties>
                <default.classifier>win</default.classifier>
            </properties>
            <dependencies>
                <dependency>
                    <groupId>org.openjfx</groupId>
                    <artifactId>javafx-graphics</artifactId>
                    <version>${javafx.version}</version>
                    <classifier>win</classifier>
                </dependency>
            </dependencies>
        </profile>
        <profile>
            <id>Linux</id>
            <properties>
                <default.classifier>linux</default.classifier>
            </properties>
            <dependencies>
                <dependency>
                    <groupId>org.openjfx</groupId>
                    <artifactId>javafx-graphics</artifactId>
                    <version>${javafx.version}</version>
                    <classifier>linux</classifier>
                </dependency>
            </dependencies>
        </profile>
    </profiles>
    <dependencies>
        <dependency>
            <groupId>org.openjfx</groupId>
            <artifactId>javafx-controls</artifactId>
            <version>${javafx.version}</version>
            <classifier>win</classifier>
        </dependency>
        <dependency>
            <groupId>tech.hiddenproject.compaj</groupId>
            <artifactId>lang</artifactId>
            <version>${lang.version}</version>
        </dependency>
        <dependency>
            <groupId>com.pixelduke</groupId>
            <artifactId>fxribbon</artifactId>
            <version>1.2.2</version>
            <exclusions>
                <exclusion>
                    <groupId>org.openjfx</groupId>
                    <artifactId>*</artifactId>
                </exclusion>
            </exclusions>
        </dependency>
        <dependency>
            <groupId>org.jfxtras</groupId>
            <artifactId>jmetro</artifactId>
            <version>11.6.14</version>
            <exclusions>
                <exclusion>
                    <groupId>org.openjfx</groupId>
                    <artifactId>*</artifactId>
                </exclusion>
            </exclusions>
        </dependency>
        <dependency>
            <groupId>com.dlsc.formsfx</groupId>
            <artifactId>formsfx-core</artifactId>
            <version>11.3.2</version>
            <exclusions>
                <exclusion>
                    <groupId>org.openjfx</groupId>
                    <artifactId>*</artifactId>
                </exclusion>
            </exclusions>
        </dependency>
        <dependency>
            <groupId>org.kordamp.ikonli</groupId>
            <artifactId>ikonli-javafx</artifactId>
            <version>12.3.1</version>
            <exclusions>
                <exclusion>
                    <groupId>org.openjfx</groupId>
                    <artifactId>*</artifactId>
                </exclusion>
            </exclusions>
        </dependency>
        <dependency>
            <groupId>org.fxmisc.richtext</groupId>
            <artifactId>richtextfx</artifactId>
            <version>0.10.9</version>
            <exclusions>
                <exclusion>
                    <groupId>org.openjfx</groupId>
                    <artifactId>*</artifactId>
                </exclusion>
            </exclusions>
        </dependency>
        <dependency>
            <groupId>org.kordamp.ikonli</groupId>
            <artifactId>ikonli-carbonicons-pack</artifactId>
            <version>12.3.1</version>
            <exclusions>
                <exclusion>
                    <groupId>org.openjfx</groupId>
                    <artifactId>*</artifactId>
                </exclusion>
            </exclusions>
        </dependency>
        <dependency>
            <groupId>com.workday</groupId>
            <artifactId>timeseries-forecast</artifactId>
            <version>1.1.1</version>
        </dependency>
    </dependencies>
    <build>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <configuration>
                    <source>11</source>
                    <target>11</target>
                </configuration>
                <executions>
                    <execution>
                        <phase>compile</phase>
                    </execution>
                </executions>
            </plugin>
            <plugin>
                <groupId>org.openjfx</groupId>
                <artifactId>javafx-maven-plugin</artifactId>
                <version>0.0.6</version>
                <executions>
                    <execution>
                        <id>default-cli</id>
                    </execution>
                </executions>
                <configuration>
                    <mainClass>tech.hiddenproject.compaj.gui.Compaj</mainClass>
                </configuration>
            </plugin>
            <plugin>
                <artifactId>maven-jar-plugin</artifactId>
                <configuration>
                    <outputDirectory>${project.build.directory}/libs</outputDirectory>
                </configuration>
            </plugin>

            <plugin>
                <artifactId>maven-dependency-plugin</artifactId>
                <version>3.3.0</version>
                <executions>
                    <execution>
                        <id>copy-libs</id>
                        <phase>prepare-package</phase>
                        <goals>
                            <goal>copy-dependencies</goal>
                        </goals>
                        <configuration>
                            <outputDirectory>${project.build.directory}/libs</outputDirectory>
                            <includeScope>runtime</includeScope>
                            <excludeGroupIds>org.openjfx</excludeGroupIds>
                        </configuration>
                    </execution>
                    <execution>
                        <id>copy-modules</id>
                        <phase>prepare-package</phase>
                        <goals>
                            <goal>copy-dependencies</goal>
                        </goals>
                        <configuration>
                            <outputDirectory>${project.build.directory}/mods</outputDirectory>
                            <includeScope>runtime</includeScope>
                            <includeGroupIds>org.openjfx</includeGroupIds>
                            <classifier>${default.classifier}</classifier>
                        </configuration>
                    </execution>
                </executions>
            </plugin>
            <!-- jpackage -->
            <plugin>
                <groupId>org.codehaus.mojo</groupId>
                <artifactId>exec-maven-plugin</artifactId>
                <version>3.0.0</version>
                <executions>
                    <execution>
                        <id>create-package</id>
                        <phase>package</phase>
                        <goals>
                            <goal>exec</goal>
                        </goals>
                        <configuration>
                            <executable>${jpackager.path}</executable>
                            <workingDirectory>${project.build.directory}</workingDirectory>
                            <longModulepath>false
                            </longModulepath> <!-- fix for https://github.com/mojohaus/exec-maven-plugin/issues/75 -->
                            <environmentVariables>
                                <JAVA_HOME>${java.home}</JAVA_HOME>
                            </environmentVariables>
                            <arguments>
                                <!-- packager arguments -->
                                <argument>create-image</argument>
                                <argument>--verbose</argument>
                                <argument>--echo-mode</argument>
                                <argument>--input</argument>
                                <argument>${project.build.directory}/libs</argument>
                                <argument>--class</argument>
                                <argument>tech.hiddenproject.compaj.gui.Main</argument>
                                <argument>--main-jar</argument>
                                <argument>./gui-${gui.version}.jar</argument>
                                <argument>--output</argument>
                                <argument>package</argument>
                                <argument>--identifier</argument>
                                <argument>tech.hiddenproject.compaj.gui</argument>
                                <argument>--name</argument>
                                <argument>CompaJ</argument>

                                <!-- jlink arguments -->
                                <argument>--module-path</argument>
                                <argument>${java.home}/jmods:${project.build.directory}/mods</argument>
                                <argument>--add-modules</argument>
                                <argument>
                                    java.base,java.sql,java.scripting,java.logging,java.desktop,java.xml,jdk.unsupported,javafx.base,javafx.graphics,javafx.controls
                                </argument>
                                <argument>--strip-native-commands</argument>
                            </arguments>
                        </configuration>
                    </execution>
                </executions>
            </plugin>
        </plugins>
    </build>
</project>
